--- a/styleTenis.css
+++ b/styleTenis.css
@@ -1,19 +1,19 @@
 * {
     font-family: 'kenyancoffee', sans-serif;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'kenyancoffee';
     src: url(./fonts/kenyan_coffee/Kenyan\ Coffee\ Rg.otf);
-  }
-  
-  body {
+}
+
+body {
     margin: 0px;
     background-color: #04471C;
-  }
-  
-  
-  header {
+}
+
+
+header {
     background-image: url("./images/tipos-pistas-de-tenis2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -27,27 +27,27 @@
     border-top: 12px solid #0D2818;
     border-bottom: 12px solid #0D2818;
     border-radius: 0% 0% 2% 2%;
-  }
-  
-  header a {
+}
+
+header a {
     color: rgb(223, 223, 223);
-  }
-  
-  header h1 {
+}
+
+header h1 {
     position: relative;
     margin: 0px;
     padding-top: 100px;
     font-size: 100px;
-  }
-  
-  header h2 {
+}
+
+header h2 {
     position: relative;
     margin: 0px;
     padding: 0px;
     font-size: 30px;
-  }
-  
-  header div {
+}
+
+header div {
     position: relative;
     display: flex;
     flex-direction: row;
@@ -55,9 +55,9 @@
     justify-content: space-evenly;
     font-size: 20px;
     text-shadow: -2px 2px rgb(19, 19, 19);
-  }
-  
-  .degradadoImagen {
+}
+
+.degradadoImagen {
     background: rgb(13, 40, 24);
     background: linear-gradient(90deg, rgba(13, 40, 24, 1) 12%, rgba(208, 43, 43, 0) 50%, rgba(13, 40, 24, 1) 88%);
     top: 0;
@@ -65,119 +65,134 @@
     position: absolute;
     height: 320px;
     width: 100vw;
-  }
-  
-  .tituloFormulario {
+}
+
+.tituloFormulario {
     text-align: center;
     color: rgb(223, 223, 223);
     margin-top: 0px;
-  }
-  
-  main {
+}
+
+main {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .fondoBorde {
+}
+
+.fondoBorde {
     margin-top: 30px;
     border: 2px solid #0e2517;
     border-radius: 4%;
     padding: 2px;
-  }
-  
-  .contenedorFondo {
+}
+
+.contenedorFondo {
     background-color: #0e2517;
     border-radius: inherit;
     min-width: 60%;
     color: rgb(223, 223, 223);
     padding: 20px 30px;
-  }
-  
-  .contenedorOrden {
+}
+
+.contenedorOrden {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     font-size: 26px;
     margin: 20px 0px;
-  }
-  
-  .footerOrden{
+}
+
+.footerOrden {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     background-color: #0D2818;
     color: rgb(223, 223, 223);
     text-shadow: rgb(19, 19, 19);
-  }
-  
-  .footerOrden a{
+}
+
+.footerOrden a {
     color: rgb(223, 223, 223);
-  }
-  
-  .contenedorAds{
+}
+
+.contenedorAds {
     margin: 10px 0px;
     background-color: rgb(238, 238, 238);
     border: 3px solid rgb(204, 204, 204);
     max-width: 150px;
     position: relative;
-  }
-  
-  .lmfmAD{
+}
+
+.lmfmAD {
     display: flex;
     background-color: #000000;
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size:20px;
+    font-size: 20px;
     min-height: 100%;
     justify-content: center;
-  }
-  
-  .lmfmAD a{
-    text-decoration:none;
+}
+
+.lmfmAD a {
+    text-decoration: none;
     color: rgb(255, 255, 255);
-  }
-  
-  .ultrakillAD{
+}
+
+.lmfmAD button {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 87%;
+    background-color: #6eb9ff;
+}
+
+.ultrakillAD button {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    bottom: 96%;
+    left: 87%;
+    background-color: #6eb9ff;
+}
+
+.ultrakillAD {
     display: flex;
     flex-direction: column;
     background-color: #FE0000;
     color: rgb(0, 0, 0);
     text-align: center;
-    font-size:20px;
+    font-size: 20px;
     min-height: 100%;
     justify-content: center;
-  }
-  
-  .ultrakillAD a{
-    text-decoration:none;
+}
+
+.ultrakillAD a {
+    text-decoration: none;
     color: rgb(0, 0, 0);
-  }
-  
-  
-  
-  .boton {
+}
+
+
+
+.boton {
     background: rgb(22, 219, 101);
     color: rgb(223, 223, 223);
     font-size: 20px;
     cursor: pointer;
     padding: 10px;
     margin: 10px;
-  }
-  
-  button a:visited {
+}
+
+button a:visited {
     color: rgb(92, 92, 92);
     text-shadow: -2px 2px rgb(223, 223, 223);
-  }
-  
-  button a:active {
+}
+
+button a:active {
     color: rgb(22, 219, 101);
     text-shadow: -2px 2px rgb(19, 19, 19);
-  }
-  
-  button a:link {
+}
+
+button a:link {
     color: rgb(223, 223, 223);
     text-shadow: -2px 2px rgb(19, 19, 19);
-  }
-  
-  
+}
